syntax = "proto3";

option csharp_namespace = "PharmacyApi.Protos";
import "Protos/registerHospital.proto";

service gRPCHospitalService{
	rpc registerHospital(RegisterHospitalRequest) returns (RegisterHospitalResponse);
}