syntax = "proto3";

option csharp_namespace = "PharmacyApi.Protos";

message RegisterHospitalRequest{
	string pharmacyName = 1;
	string pharmacyLocalhost = 2;
	string apiKey =  3;
}
message RegisterHospitalResponse{
	string response = 1;
}