syntax = "proto3";

option csharp_namespace = "IntegrationAPI.Protos";

message CheckMedicineExistenceRequest{
	string medicineName = 1;
	double medicineDosage = 2;
	int64 quantity = 3;
	string apiKey =  4;
}
message CheckMedicineExistenceResponse{
	string response = 1;
}