syntax = "proto3";

option csharp_namespace = "IntegrationAPI.Protos";

message RegisterPharmacyRequest{
	string hospitalName = 1;
	string hospitalLocalhost = 2;
	string apiKey =  3;
}
message RegisterPharmacyResponse{
	string response = 1;
}